Fixed bug with align arrow button on image bottom

--- a/src/app/dialogs/image/image.component.scss
+++ b/src/app/dialogs/image/image.component.scss
@@ -27,5 +27,4 @@ img {
 .mat-icon[svgicon="arrow-right"] {
   height: 100px;
   width: 100px;
-  bottom: 0;
 }
